--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>BloodAppeal - Recycle Yourself, Donate Blood</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./libraries/bootstrap/css/bootstrap.min.css" />
-    <!-- App CSS -->
+    <!-- Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="./libraries/bootstrap-4.3.1/css/bootstrap.min.css"
+    />
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
     <link
       rel="shortcut icon"
@@ -116,7 +119,7 @@
     </main>
 
     <!-- Bootstrap Dependencies -->
-    <script src="./libraries/bootstrap/js/jquery-3.3.1.slim.min.js"></script>
-    <script src="./libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./libraries/bootstrap-4.3.1/js/jquery-3.4.1.slim.min.js"></script>
+    <script src="./libraries/bootstrap-4.3.1/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
