--- a/src/pages/blood-facts.html
+++ b/src/pages/blood-facts.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Blood Facts - BloodAppeal</title>
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap -->
     <link
       rel="stylesheet"
-      href="../libraries/bootstrap/css/bootstrap.min.css"
+      href="../libraries/bootstrap-4.3.1/css/bootstrap.min.css"
     />
-    <!-- App CSS -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="../styles/style.css" />
     <link
       rel="shortcut icon"
@@ -140,7 +140,7 @@
     </main>
 
     <!-- Bootstrap Dependencies -->
-    <script src="../libraries/bootstrap/js/jquery-3.3.1.slim.min.js"></script>
-    <script src="../libraries/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../libraries/bootstrap-4.3.1/js/jquery-3.4.1.slim.min.js"></script>
+    <script src="../libraries/bootstrap-4.3.1/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
