--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,8 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
-    <link
-      rel="shortcut icon"
-      href="./images/favicons/favicon.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <header>
