--- a/src/pages/blood-facts.html
+++ b/src/pages/blood-facts.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Blood Facts - BloodAppeal</title>
+    <link rel="shortcut icon" href="../favicon.png" type="image/x-icon" />
+    <link rel="manifest" href="../manifest.json" />
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -12,8 +14,6 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="shortcut icon" href="../favicon.png" type="image/x-icon" />
-    <link rel="manifest" href="../manifest.json" />
   </head>
   <body>
     <header>
@@ -48,13 +48,8 @@
               <a class="nav-link h5" href="./blood-tips.html">Blood Tips</a>
             </li>
           </ul>
-          <a href="../pages/login.html" class="btn btn-info h-btn" role="button"
-            >LOGIN</a
-          >
-          <a
-            href="../pages/signup.html"
-            class="btn btn-outline-info h-btn"
-            role="button"
+          <a href="#" class="btn btn-info h-btn" role="button">LOGIN</a>
+          <a href="#" class="btn btn-outline-info h-btn" role="button"
             >SIGNUP</a
           >
         </div>
