--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>BloodAppeal - Recycle Yourself, Donate Blood</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <link rel="manifest" href="manifest.json" />
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -12,8 +14,6 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
-    <link rel="manifest" href="manifest.json" />
   </head>
   <body>
     <header>
@@ -52,13 +52,8 @@
               >
             </li>
           </ul>
-          <a href="../pages/login.html" class="btn btn-info h-btn" role="button"
-            >LOGIN</a
-          >
-          <a
-            href="../pages/signup.html"
-            class="btn btn-outline-info h-btn"
-            role="button"
+          <a href="#" class="btn btn-info h-btn" role="button">LOGIN</a>
+          <a href="#" class="btn btn-outline-info h-btn" role="button"
             >SIGNUP</a
           >
         </div>
@@ -82,7 +77,7 @@
           </p>
         </div>
         <div class="h-d-div">
-          <a href="./pages/login.html">
+          <a href="#">
             <button type="button" class="btn btn-info btn-lg h-btn h-d-btn">
               Donate Now
             </button>
@@ -106,7 +101,7 @@
           </p>
         </div>
         <div class="h-d-div">
-          <a href="./pages/login.html">
+          <a href="#">
             <button type="button" class="btn btn-info btn-lg h-btn h-d-btn">
               Find Donor
             </button>
