--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="h-brand" href="index.html">
+        <a class="brand" href="index.html">
           <h1 title="BloodAppeal - Recycle Yourself, Donate Blood">
             BloodAppeal
           </h1>
@@ -52,15 +52,15 @@
               >
             </li>
           </ul>
-          <a href="#" class="btn btn-info h-btn" role="button">LOGIN</a>
-          <a href="#" class="btn btn-outline-info h-btn" role="button"
+          <a href="#" class="btn btn-info nav-btn" role="button">LOGIN</a>
+          <a href="#" class="btn btn-outline-secondary nav-btn" role="button"
             >SIGNUP</a
           >
         </div>
       </nav>
     </header>
 
-    <main role="main" id="main-box">
+    <main role="main">
       <div class="jumbotron h-j1">
         <div class="container-fluid">
           <img
@@ -76,14 +76,18 @@
             Register as a donor today and become the reason for a saved life.
           </p>
         </div>
-        <div class="h-d-div">
+        <div class="action-wrapper">
           <a href="#">
-            <button type="button" class="btn btn-info btn-lg h-btn h-d-btn">
+            <button
+              type="button"
+              class="btn btn-info btn-lg action-btn h-d-btn"
+            >
               Donate Now
             </button>
           </a>
         </div>
       </div>
+
       <div class="jumbotron h-j2">
         <div class="container-fluid">
           <img
@@ -100,9 +104,12 @@
             donors.
           </p>
         </div>
-        <div class="h-d-div">
+        <div class="action-wrapper">
           <a href="#">
-            <button type="button" class="btn btn-info btn-lg h-btn h-d-btn">
+            <button
+              type="button"
+              class="btn btn-info btn-lg action-btn h-d-btn"
+            >
               Find Donor
             </button>
           </a>
