--- a/src/pages/blood-tips.html
+++ b/src/pages/blood-tips.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="h-brand" href="../index.html">
+        <a class="brand" href="../index.html">
           <h1 title="BloodAppeal - Recycle Yourself, Donate Blood">
             BloodAppeal
           </h1>
@@ -48,15 +48,15 @@
               >
             </li>
           </ul>
-          <a href="#" class="btn btn-info h-btn" role="button">LOGIN</a>
-          <a href="#" class="btn btn-outline-info h-btn" role="button"
+          <a href="#" class="btn btn-info nav-btn" role="button">LOGIN</a>
+          <a href="#" class="btn btn-outline-secondary nav-btn" role="button"
             >SIGNUP</a
           >
         </div>
       </nav>
     </header>
 
-    <main role="main" id="main-box">
+    <main role="main">
       <div class="jumbotron t-j1">
         <div class="container-fluid">
           <h1 class="display-3 t-h1">Blood Tips</h1>
