--- a/src/index.html
+++ b/src/index.html
@@ -77,14 +77,9 @@
           </p>
         </div>
         <div class="action-wrapper">
-          <a href="#">
-            <button
-              type="button"
-              class="btn btn-info btn-lg action-btn h-d-btn"
-            >
-              Donate Now
-            </button>
-          </a>
+          <button type="button" class="btn btn-info btn-lg action-btn h-d-btn">
+            Donate Now
+          </button>
         </div>
       </div>
 
@@ -105,14 +100,9 @@
           </p>
         </div>
         <div class="action-wrapper">
-          <a href="#">
-            <button
-              type="button"
-              class="btn btn-info btn-lg action-btn h-d-btn"
-            >
-              Find Donor
-            </button>
-          </a>
+          <button type="button" class="btn btn-info btn-lg action-btn h-d-btn">
+            Find Donor
+          </button>
         </div>
       </div>
     </main>
