--- a/src/404.html
+++ b/src/404.html
@@ -85,6 +85,7 @@
         The specified file was not found on this website. Please check the URL
         for mistakes and try again.
       </p>
+      <a href="index.html">Back to home</a>
     </div>
   </body>
 </html>
