Add icons in all pages

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>BloodAppeal - Recycle Yourself, Donate Blood</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <meta name="theme-color" content="#343A40" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="./images/favicons/bloodappeal-192.png"
+    />
+    <link
+      rel="icon"
+      sizes="512x512"
+      href="./images/favicons/bloodappeal-512.png"
+    />
+
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
