Enhanced styling acording to forms

--- a/src/index.html
+++ b/src/index.html
@@ -64,8 +64,16 @@
               >
             </li>
           </ul>
-          <a href="#" class="btn btn-info nav-btn" role="button">LOGIN</a>
-          <a href="#" class="btn btn-outline-secondary nav-btn" role="button"
+          <a
+            href="./pages/login.html"
+            class="btn btn-info nav-btn"
+            role="button"
+            >LOGIN</a
+          >
+          <a
+            href="./pages/signup.html"
+            class="btn btn-outline-secondary nav-btn"
+            role="button"
             >SIGNUP</a
           >
         </div>
@@ -73,13 +81,13 @@
     </header>
 
     <main role="main">
-      <div class="jumbotron h-j1">
+      <div class="jumbotron h-j1 shadow-sm">
         <div class="container-fluid">
           <img
             src="./images/blood-donation-vector.jpg"
             alt="blood-donation-image"
             title="Recycle Yourself, Donate Blood"
-            class="img-fluid rounded float-right shadow p-3 mb-5 bg-white"
+            class="img-fluid rounded float-right shadow-sm p-3 mb-5 bg-white"
             height="200px"
             width="300px"
           />
@@ -95,13 +103,13 @@
         </div>
       </div>
 
-      <div class="jumbotron h-j2">
+      <div class="jumbotron h-j2 shadow-sm">
         <div class="container-fluid">
           <img
             src="./images/blood-donation-vector-2.jpg"
             alt="blood-donation-image"
             title="Recycle Yourself, Donate Blood"
-            class="img-fluid rounded float-right shadow p-3 mb-5 bg-white"
+            class="img-fluid rounded float-right shadow-sm p-3 mb-5 bg-white"
             height="200px"
             width="300px;"
           />
