--- a/src/pages/blood-tips.html
+++ b/src/pages/blood-tips.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Blood Tips - BloodAppeal</title>
+    <title>Blood tips - BloodAppeal</title>
     <meta name="theme-color" content="#343A40" />
     <link rel="manifest" href="../manifest.json" />
     <link rel="shortcut icon" href="../favicon.png" type="image/x-icon" />
@@ -60,8 +60,13 @@
               >
             </li>
           </ul>
-          <a href="#" class="btn btn-info nav-btn" role="button">LOGIN</a>
-          <a href="#" class="btn btn-outline-secondary nav-btn" role="button"
+          <a href="./login.html" class="btn btn-info nav-btn" role="button"
+            >LOGIN</a
+          >
+          <a
+            href="./signup.html"
+            class="btn btn-outline-secondary nav-btn"
+            role="button"
             >SIGNUP</a
           >
         </div>
@@ -69,7 +74,7 @@
     </header>
 
     <main role="main">
-      <div class="jumbotron t-j1">
+      <div class="jumbotron t-j1 shadow-sm">
         <div class="container-fluid">
           <h1 class="display-3 t-h1">Blood Tips</h1>
           <ul class="list-group shd">
