--- a/src/pages/reset-password.html
+++ b/src/pages/reset-password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Blood facts - BloodAppeal</title>
+    <title>Blood Facts - BloodAppeal</title>
     <meta name="theme-color" content="#343A40" />
     <link rel="manifest" href="../manifest.json" />
     <link rel="shortcut icon" href="../favicon.png" type="image/x-icon" />
@@ -60,13 +60,8 @@
               <a class="nav-link h5" href="./blood-tips.html">Blood Tips</a>
             </li>
           </ul>
-          <a href="./login.html" class="btn btn-info nav-btn" role="button"
-            >LOGIN</a
-          >
-          <a
-            href="./signup.html"
-            class="btn btn-outline-secondary nav-btn"
-            role="button"
+          <a href="#" class="btn btn-info nav-btn" role="button">LOGIN</a>
+          <a href="#" class="btn btn-outline-secondary nav-btn" role="button"
             >SIGNUP</a
           >
         </div>
@@ -74,7 +69,7 @@
     </header>
 
     <main role="main">
-      <div class="jumbotron f-j1 shadow-sm">
+      <div class="jumbotron f-j1">
         <div class="container-fluid">
           <h1 class="display-3 f-h1">Blood Facts</h1>
           <ul class="list-group shd">
